fix topnav layout code + fix logo on safari

--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -27,16 +27,15 @@
   background-color: $secondary;
   box-shadow: 0px 4px 5px 0px rgba(0, 0, 0, 0.3);
   padding: 10px;
-  a {
-    width: 100%;
-    img{
-      height: 100%;
+  .oneplan-logo-container {
+    width: 32px;
+    margin-right: 16px;
+    display: flex;
+    * > img{
+      max-width: 100%;
+      max-height: 100%;
+      display: block; /* remove extra space below image */
     }
-  }
-  * > :hover{
-    color: $primary;
-    text-decoration: none;
-    transition: 0.2s;
   }
   :hover{
     color: $primary;
@@ -44,71 +43,36 @@
     transition: 0.2s;
   }
 }
-.login{
-  display: inline-block;
-  position: absolute;
-  right: 0%;
-  top: 0%;
-  outline:none;
-  border: none;
-  background-color: black;
-  color: white;
-  width: 72px;
-  height: 52px;
-}
-
-.login :hover{
-  border: none;
-}
-
-.login :focus{
-  outline: none;
-}
-
-.signin{
-  display: inline-block;
-  position: absolute;
-  right: 72px;
-  top: 0%;
-  outline:none;
-  border: none;
-  background-color: black;
-  color: white;
-  width: 72px;
-  height: 52px;
-}
-
-.signin-button{
-  display: inline-block;
-  position: absolute;
-  right: 0%;
-  top: 0%;
-  outline:none;
-  border: none;
-  background-color: black;
-  color: white;
-  width: 72px;
-  height: 52px;
-}
-
-.signin :hover, .signin :focus, .signin :active{
-  outline: none;
-  outline: 0;
-}
 
 .search-plan-a{
-  display: inline-block;
-  position: absolute;
-  left: calc(50px + 1em);
-  top: 0%;
+  display: flex;
+  flex: auto;
+  outline:none;
+  color: white;
+  font-weight: normal;
+  align-items: center;
+}
+
+.login-button{
+  display: flex;
+  align-self: center;
+  text-align: center;
   outline:none;
   border: none;
   background-color: black;
   color: white;
-  width: 152px !important;
-  height: 52px;
-  line-height: 52px;
-  font-weight: normal;
+  margin-right: 16px;
+}
+
+
+.signup-button{
+  display: flex;
+  align-self: center;
+  text-align: center;
+  outline:none;
+  border: none;
+  background-color: black;
+  color: white;
 }
 
 .user-profile{
